# ruma-client-api

./: Cargo.toml
src/: unversioned.rs
src/r0/: account.rs  alias.rs  config.rs  contact.rs  context.rs  directory.rs  filter.rs  media.rs  membership.rs  presence.rs  profile.rs  receipt.rs  redact.rs  room.rs  search.rs  send.rs  server.rs  session.rs  sync.rs  tag.rs  typing.rs  voip.rs
