[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Serializable request and response types for the Matrix client API."
documentation = "https://docs.rs/ruma-client-api"
homepage = "https://github.com/ruma/ruma-client-api"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma-client-api"
version = "0.1.0"

[dependencies]
ruma-api = { git = "https://github.com/exul/ruma-api", branch = "update-dependencies" }
ruma-events = "0.8.0"
ruma-identifiers = "0.11.0"
ruma-signatures = "0.3.0"
serde = "1.0.1"
serde_derive = "1.0.1"
serde_json = "1.0.0"
