[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Serializable request and response types for the Matrix client API."
documentation = "https://docs.rs/ruma-client-api"
homepage = "https://github.com/ruma/ruma-client-api"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma-client-api"
version = "0.1.0"

[dependencies]
ruma-api = { git = "https://github.com/exul/ruma-api" }
ruma-events = { git = "http://github.com/exul/ruma-events" }
ruma-identifiers = { git = "https://github.com/exul/ruma-identifiers.git", features = ["diesel"] }
ruma-signatures = { git = "https://github.com/exul/ruma-signatures", branch = "update-dependencies" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.0"
