[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Serializable request and response types for the Matrix client API."
documentation = "https://docs.rs/ruma-client-api"
homepage = "https://github.com/ruma/ruma-client-api"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma-client-api"
version = "0.1.0"

[dependencies]
ruma-api = { git = "https://github.com/exul/ruma-api" }
ruma-events = { version = "0.11" }
ruma-identifiers = { version = "0.11", features = ["diesel"] }
ruma-signatures = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.0"
